# redlist_docs

./: .gitignore  .pdm-python  bayesian_docs.md  changelog.md  criteria.md  glossary.md  makefile  model-assessment.md  model.md  model_assessment.md  plan.md  process.md  process_overview.md  readme.md  regional_rarity.md  rulings.md  style_guide.md  todo.md  understandings.md  web_build_move.sh
External review/: instructions to reviewers.md
advice/: readme.md  redlist_notes.md  using public data.md
completed_docs/: about.md
dev/: excel.md  excel_doc_meeting.md  todo.md
diagrams/: expert_a2.drawio
docs/: 20250207_status_rarity.csv  20250207_status_rarity.mer  Excel data dictionary.md  NationalRarity.mer  _config.yml  glossary.md  index.md  model-assessment summary.md  national_rarity_grades.md  national_rulings.md  rulings.md
expanded_data_review/: results.md
further_data/: readme.md
internal review code/: a2_condense.sql  header.csv  markdown_header.md  (+2 more)
py/: .gitignore  .pdm-python  _lib.py  load_data.py  pyproject.toml  readme.md  write_lc_narrative.py  write_outputs.py
py/filemaker_data/: assessment.mer  assessment_acceptance.mer  bus.mer  condensed_a2.mer  dependency.mer  feedback.mer  frescalo_10.mer  internal_review.mer  major_grouping.mer  markdown.mer  mcp.mer  narrative.mer  nat_eng.mer  national_rarity.mer  nomenclature.mer  occupancy_10.mer  record_count.mer  regional_hectad_count.mer  summary.mer  tetrad_area.mer  wider_review.mer
py/lib/: markdown.py  prepare.py
py/lib/narrative/: RedListStatus.py  a2.py  bd.py  helper.py  readme.md
(+3356 files in other folders)
