[project]
name = "Red_List_Python_Tools"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rowan Edwards", email = "rowan.edw@gmail.com"},
]
dependencies = ["pandas>=3.0.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
